@@ -44,7 +44,7 @@ The line reader requires direct terminal access. Therefore, do not launch Rebel 
 To quickly try Rebel Readline, [install the Clojure CLI tools](https://clojure.org/guides/getting_started) and execute:
 
 ```shell
-clojure -Sdeps "{:deps {com.bhauman/rebel-readline {:mvn/version \"0.1.5\"}}}" -M -m rebel-readline.main
+clojure -J--enable-native-access=ALL-UNNAMED -Sdeps "{:deps {com.bhauman/rebel-readline {:mvn/version \"0.1.5\"}}}" -M -m rebel-readline.main
 ```
 
 ## Usage
@@ -81,6 +81,7 @@ Add Rebel Readline as a tool within your `~/.clojure/deps.edn`:
  :aliases {:rebel {:extra-deps {com.bhauman/rebel-readline {:mvn/version "0.1.5"}}
                    :exec-fn rebel-readline.tool/repl
                    :exec-args {}
+                   :jvm-opts ["--enable-native-access=ALL-UNNAMED"]
                    :main-opts ["-m" "rebel-readline.main"]}}
  ...
 }
